Install as a gem, and configuration script.

--- a/README.rdoc
+++ b/README.rdoc
@@ -12,14 +12,41 @@ TheTwittHit is a simple script that collects twitts with the hashtag *#todo* fro
 
 and add them to the application's inbox were i can review them later.
 
-== Installation
+== Install
 
-TODO
+Just open a terminal and write:
 
-== Configuration
+  sudo gem install sagmor-thetwitthit --source http://gems.github.com
+  thetwitthit install
 
-TODO
+follow the instructions and you are ready to go
 
 == Usage
 
 Once you had configured it simply {twitt using the #todo hashtag}[http://twitter.com/home?status=%23todo] and see how TheTwittHit do the rest
+
+== License
+
+Copyright (c) 2009 Sebastián Gamboa
+
+Permission is hereby granted, free of charge, to any
+person obtaining a copy of this software and associated
+documentation files (the "Software"), to deal in the
+Software without restriction, including without limitation
+the rights to use, copy, modify, merge, publish,
+distribute, sublicense, and/or sell copies of the
+Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice
+shall be included in all copies or substantial portions of
+the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY
+KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
+WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
+PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS
+OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
+OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
+OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
